--- a/index.html
+++ b/index.html
@@ -5,14 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>pizza.beer.computer</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <ol>
-        <li>Meno Male</li>
-        <li>Giro</li>
-        <li>450 Gradi</li>
-        <li>Bistro Bananas</li>
-        <li>Omnipollos Hatt</li>
-    </ol>
+    <div class="content">
+        <header>
+            <ul>
+                <li>top 5</li>
+                <li>stockholm</li>
+            </ul>
+        </header>
+        <div class="pizza">
+            <ol class="pizza-rank">
+                <li>Meno Male<span class="negroni">*</span></li>
+                <li>Giro<span class="negroni">*</span></li>
+                <li>450 Gradi</li>
+                <li>Bistro Bananas<span class="negroni">*</span></li>
+                <li>Omnipollos Hatt</li>
+            </ol>
+        </div>
+        <div class="when">18 04 13</div>
+        <div class="sign">🍕</div>
+        <div class="footnotes">
+            <ul>
+                <li class="negroni">*negroni</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
